oxygen-framework/css/xslt-conref.less
/* Hides the required content that is just needed for display on 
 xslt-conref for topic, ol/li, ul/li, table */
*[class~="topic/topic"][*|xsl]:not([conaction]) > *[class~="topic/topic"],
*[class~="topic/table"][*|xsl]:not([conaction]) > *[class~="topic/table"],
*[class~="topic/ol"][*|xsl]:not([conaction]) > *[class~="topic/ol"],
*[class~="topic/ul"][*|xsl]:not([conaction]) > *[class~="topic/ul"],
*[class~="topic/dl"][*|xsl]:not([conaction]) > *[class~="topic/dl"],
*[class~="topic/prodinfo"][*|xsl]:not([conaction]) > *[class~="topic/prodinfo"],
*[class~="topic/ph"][*|xsl]:not([conaction]) > *[class~="topic/ph"],
*[class~="topic/dlentry"][*|xsl]:not([conaction]) > *[class~="topic/dlentry"]
{
    display : inherit;
}

*[class~="topic/simpletable"][*|xsl]:not([conaction]) > *[class~="topic/simpletable"]
{
    display : table;
}

*[class~="topic/table"][*|xsl]:not([conaction]) > *,    
*[class~="topic/simpletable"][*|xsl]:not([conaction]) > *,
*[class~="topic/ol"][*|xsl]:not([conaction]) > *,
*[class~="topic/ul"][*|xsl]:not([conaction]) > *, 
*[class~="topic/topic"][*|xsl]:not([conaction]) > *,
*[class~="topic/dl"][*|xsl]:not([conaction]) > *,
*[class~="topic/prodinfo"][*|xsl]:not([conaction]) > *,
*[class~="topic/ph"][*|xsl]:not([conaction]) > *,
*[class~="topic/dlentry"][*|xsl]:not([conaction]) > *
{
    display : none;
}

/* avoid double border on conref reference table */
*[class~="topic/simpletable"][conref]:not([conaction]),
*[class~="topic/simpletable"][conkeyref]:not([conaction]),
*[class~="topic/simpletable"][*|xsl]:not([conaction]),
*[class~="topic/tgroup"][conref]:not([conaction]),
*[class~="topic/tgroup"][conkeyref]:not([conaction]),
*[class~="topic/tgroup"][*|xsl]:not([conaction]) {
	border: none;
}

/* Remove static text, no margins */
*[*|xsl]:not([conaction]):before {
    content:	"";
    display:	inline;
    margin:		0px;
}


*[class~="topic/table"][*|xsl]:not([conaction])
*[class~="topic/simpletable"][*|xsl]:not([conaction]){
    display : block;
}

*[class~="topic/row"][*|xsl] {
  	content: "" !important;
}


/* Modify Header before xslt-conref  */

@OpenXsltConrefScriptButton: 
		oxy_button(
			action, oxy_action(
		            name, 			'Open Script', 
		            description, 	'Open XSLT-Conref XSL Script file', 
		            icon, 			url('../img/openScript.png'), 
		            operation, 		'org.DitaSemia.Oxygen.XsltConref.OpenXsltConrefFile'
		            arg-filetype,	'script'),
			transparent, 				true,
			showIcon, 					true,
			enableInReadOnlyContext, 	true);
			
@OpenXsltConrefSourceButton: 
		oxy_button(
  			action, oxy_action(
		            name, 			'Open Source', 
		            description, 	'Open XSLT-Conref XML Source file', 
		            icon, 			url('../img/openSource.png'), 
		            operation, 		'org.DitaSemia.Oxygen.XsltConref.OpenXsltConrefFile'
		            arg-filetype,	'source'),
			transparent, 				true,
			showIcon, 					true,
			enableInReadOnlyContext, 	true);

@XsltConrefRefreshButton: 
  		oxy_button(
  			action, oxy_action(
		            name, 			'Refresh', 
		            description, 	'Refresh the XSLT-Conref', 
		            icon, 			url('../img/refreshReference.png'), 
		            operation, 		'org.DitaSemia.Oxygen.XsltConref.RefreshXsltConref'),
			transparent, 				true,
			showIcon, 					true,
			enableInReadOnlyContext, 	true);

*[*|xsl] > oxy|error:before,
*[*|xsl] > oxy|reference:before {
    background-color: rgb(240, 240, 240) !important;
	display: -oxy-morph !important;
  	content: 
  		@OpenXsltConrefScriptButton
  		@XsltConrefRefreshButton
  		!important;
}

*[*|xsl][*|source] > oxy|error:before,
*[*|xsl][*|source] > oxy|reference:before {
  	content: 
  		@OpenXsltConrefScriptButton
  		@OpenXsltConrefSourceButton
  		@XsltConrefRefreshButton
  		!important; 
}

*[*|xsl] > oxy|error:before,
*[*|xsl][*|source] > oxy|error:before{
	-oxy-append-content: "[" !important;
}

/* support the no-content result element */
*[*|xsl] no-content {
	/* Mark content to be invisible in output */
	font-size: 	0.8em;
	color:		#999999;
}

/* support the temp-context element */
*[*|xsl] temp-context {
	/* Mark content to be invisible in output */
	content: 	"<Refresh required>";
	font-size: 	0.8em;
	color:		#999999;
}

/* make topic/div work with oxygen 17.0 (before DITA 1.3 support) as well */
*[class~="topic/div"] {
    display: block;
}

